# SemantiFin

./: README.md
SemantiFin/: pyproject.toml  requirements.txt  run_demo.py
SemantiFin/configs/: default.yaml
SemantiFin/scripts/: download_edgar.py  download_public_datasets.py
SemantiFin/semantifin/: __init__.py  cli.py  data.py  embeddings.py  encoder.py  evaluation.py  experiments.py  extractor.py  fusion.py  narrative.py  pipeline.py  schemas.py  utils.py  visualize.py
SemantiFin/tests/: test_core.py
