[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantifin"
version = "1.0.0"
description = "Evidence-grounded financial insight extraction, temporal narrative aggregation, credibility-aware fusion, and structured encoding"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26", "pandas>=2.1", "scikit-learn>=1.3", "scipy>=1.11",
  "PyYAML>=6.0", "matplotlib>=3.8", "requests>=2.31", "python-dateutil>=2.8", "joblib>=1.3"
]

[project.scripts]
semantifin = "semantifin.cli:main"

[tool.setuptools]
packages = ["semantifin"]
